[gd_scene load_steps=16 format=2]

[ext_resource path="res://DanceStage/Conductor.gd" type="Script" id=1]
[ext_resource path="res://DanceStage/DiceCooldownUI.gd" type="Script" id=2]
[ext_resource path="res://Assets/fonts/3X5_____.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/backgrounds/anime-1658645247880-1527.jpg" type="Texture" id=4]
[ext_resource path="res://DanceStage/UI.gd" type="Script" id=5]
[ext_resource path="res://Assets/music/[Ado】うっせぇわ-HQ.wav" type="AudioStream" id=6]
[ext_resource path="res://DanceStage/JudgementArea2D.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Assets/fonts/3X5OUTLI.ttf"

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = SubResource( 4 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="RectangleShape2D" id=3]

[node name="Conductor" type="Node2D"]
script = ExtResource( 1 )
starting_note_positions = [ Vector2( 300, -50 ), Vector2( 400, -50 ), Vector2( 500, -50 ), Vector2( 600, -50 ) ]
beats_per_fall = 5.3
increase_bpm_effect = 0.5
decrease_bpm_effect = -0.5

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Anime-1658645247880-1527" type="Sprite" parent="."]
position = Vector2( 823, 522 )
scale = Vector2( 0.427408, 0.481034 )
texture = ExtResource( 4 )

[node name="JudgementAreas" type="Node2D" parent="."]

[node name="JudgementArea2D_1" parent="JudgementAreas" instance=ExtResource( 7 )]
position = Vector2( 300, 500 )

[node name="JudgementArea2D_2" parent="JudgementAreas" instance=ExtResource( 7 )]
position = Vector2( 400, 500 )

[node name="JudgementArea2D_3" parent="JudgementAreas" instance=ExtResource( 7 )]
position = Vector2( 500, 500 )

[node name="JudgementArea2D_4" parent="JudgementAreas" instance=ExtResource( 7 )]
position = Vector2( 600, 500 )

[node name="HelpUI" type="Control" parent="."]
margin_left = 278.0
margin_top = 554.0
margin_right = 318.0
margin_bottom = 594.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DLabel" type="Label" parent="HelpUI"]
margin_left = 6.0
margin_top = -13.0
margin_right = 46.0
margin_bottom = 50.0
theme = SubResource( 6 )
text = "D"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JLabel" type="Label" parent="HelpUI"]
margin_left = 302.0
margin_top = -14.0
margin_right = 342.0
margin_bottom = 49.0
theme = SubResource( 6 )
text = "J"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FLabel" type="Label" parent="HelpUI"]
margin_left = 106.0
margin_top = -11.0
margin_right = 146.0
margin_bottom = 52.0
theme = SubResource( 6 )
text = "F"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HLabel" type="Label" parent="HelpUI"]
margin_left = 206.0
margin_top = -15.0
margin_right = 246.0
margin_bottom = 48.0
theme = SubResource( 6 )
text = "H"

[node name="UI" type="Control" parent="."]
margin_left = 14.0
margin_top = 17.0
margin_right = 54.0
margin_bottom = 57.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissLabel" type="Label" parent="UI"]
visible = false
margin_left = 8.0
margin_top = 122.0
margin_right = 185.0
margin_bottom = 173.0
theme = SubResource( 2 )
text = "Miss: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitsLabel" type="Label" parent="UI"]
visible = false
margin_left = 4.0
margin_top = 61.0
margin_right = 181.0
margin_bottom = 112.0
theme = SubResource( 2 )
text = "Hits: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiceUsedLabel" type="Label" parent="UI"]
margin_left = 711.0
margin_top = 5.0
margin_right = 988.0
margin_bottom = 56.0
theme = SubResource( 2 )
text = "Dice Count: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="UI"]
margin_right = 40.0
margin_bottom = 14.0
theme = SubResource( 2 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitStreakLabel" type="Label" parent="UI"]
margin_left = 657.0
margin_top = 453.0
margin_right = 725.0
margin_bottom = 520.0
theme = SubResource( 8 )
text = "x0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiceCooldownUI" type="Line2D" parent="UI"]
position = Vector2( 722, 73 )
points = PoolVector2Array( 0, 0, 200, 0 )
width = 20.0
script = ExtResource( 2 )

[node name="DiceCooldownTimer" type="Timer" parent="UI/DiceCooldownUI"]
wait_time = 10.0

[node name="OOB_Area2D" type="Area2D" parent="."]
position = Vector2( 441, 626 )
scale = Vector2( 32.575, 3.93538 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OOB_Area2D"]
shape = SubResource( 3 )

[node name="EffectTimers" type="Node2D" parent="."]

[connection signal="finished" from="MusicStreamPlayer" to="." method="_on_MusicStreamPlayer_finished"]
[connection signal="area_entered" from="OOB_Area2D" to="." method="_on_OOB_Area2D_area_entered"]
